--- a/public/index.html
+++ b/public/index.html
@@ -25,11 +25,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-  <script async
+    <script
+      async
       src="https://kit.fontawesome.com/95227f16da.js"
       crossorigin="anonymous"
     ></script>
-    <title>Roc8 Moonshot</title>
+    <title>Data Visualization Dashboard</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
