--- a/public/index.html
+++ b/public/index.html
@@ -31,15 +31,8 @@
       crossorigin="anonymous"
     ></script>
 
-    <!-- Chart.js 4.4.0 -->
-<script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0"></script>
 
-<!-- hammer.js -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
-
-<!-- chartjs-plugin-zoom compatible with Chart.js 4.x -->
-<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@1.2.0"></script>
-    <title>Data Visualization Dashboard</title>
+    <title>Dashboard</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
